--- a/Tarea 5.1 Tabla y formulario en tu página web de Currículum/mi_perfil/Documento1.html
+++ b/Tarea 5.1 Tabla y formulario en tu página web de Currículum/mi_perfil/Documento1.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <title>Mi Perfil Profesional</title>
@@ -12,30 +13,37 @@
             margin: 40px;
             line-height: 1.6;
         }
+
         header {
             text-align: center;
             background-color: #e3f2fd;
             padding: 20px;
             border-radius: 12px;
         }
+
         nav a {
             margin: 0 10px;
             color: #0d47a1;
             text-decoration: none;
             font-weight: bold;
         }
+
         nav a:hover {
             text-decoration: underline;
         }
+
         img {
             border-radius: 10px;
         }
+
         div {
             margin-bottom: 20px;
         }
+
         hr {
-            border: 1px solid #ccc;
+            border: 5px solid #ccc;
         }
+
         blockquote {
             font-style: italic;
             color: #555;
@@ -55,8 +63,9 @@
             <a href="#datos">Datos personales</a> |
             <a href="#formacion">Formación</a> |
             <a href="#habilidades">Habilidades e intereses</a> |
-            <a href="Horario de clases"> Tabla</a> |
-            <a href="#contacto">Contacto</a>
+            <a href="#tabla">Horario de clases</a> |
+            <a href="#contacto">Contacto</a> |
+            <a href="#formulario">Formulario de recopilación de información</a>
         </nav>
     </header>
 
@@ -85,7 +94,7 @@
         </dl>
 
         <p>
-            Soy una persona <span>comprometida</span> y apasionada por la tecnología. 
+            Soy una persona <span>comprometida</span> y apasionada por la tecnología.
             Me encanta aprender y mejorar mis <span>habilidades técnicas</span> cada día.
         </p>
     </div>
@@ -96,7 +105,8 @@
     <div id="formacion">
         <h2>Formación</h2>
         <ol>
-            <li><strong>Técnico Superior</strong> en <em>Desarrollo de Aplicaciones Multiplataforma</em> - MEDAC Jaén</li>
+            <li><strong>Técnico Superior</strong> en <em>Desarrollo de Aplicaciones Multiplataforma</em> - MEDAC Jaén
+            </li>
             <li><strong>Curso</strong> de <em>Diseño Web con HTML y CSS</em></li>
             <li><strong>Bachillerato</strong> en Ciencias y Tecnología</li>
         </ol>
@@ -115,20 +125,25 @@
         </ul>
     </div>
 
+    <hr>
+
     <!--Tabla-->
     <div>
-        <div id=" Horario de clases">
+        <div id="tabla">
             <h2>Horario de clases</h2>
+
             <head>
                 <title>Horario de clases</title>
                 <style>
-                    table,th,td
-                    {
+                    table,
+                    th,
+                    td {
                         border: 1px solid black;
                         text-align: center;
                     }
                 </style>
             </head>
+
             <body>
                 <table>
                     <caption>Horario</caption>
@@ -164,9 +179,16 @@
                             <td>12.00-13.00</td>
                             <td rowspan="3">Programación</td>
                             <td rowspan="3">Bases de Datos</td>
-                            <td rowspan="2">Programación</td>
+                            <td>Sostenibilidad</td>
                             <td rowspan="3">Programación</td>
-                            <td rowspan="3">Programación</td>
+                            <td rowspan="3">Itinerario personal para la empleabilidad</td>
+                        </tr>
+                        <tr>
+                            <td>13.00-14.00</td>
+                            <td rowspan="2">Sistemas informáticos</td>
+                        </tr>
+                        <tr>
+                            <td>14.00-15.00</td>
                         </tr>
 
                     </tbody>
@@ -182,9 +204,10 @@
         <h2>Contenido multimedia</h2>
         <p>Aquí puedes ver una imagen relacionada con mi formación:</p>
         <img src="img/medac.jpg" alt="Centro MEDAC Jaén" title="Centro MEDAC Jaén" width="300" height="200">
-        
+
         <p>Ubicación del centro MEDAC Jaén:</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.7236460591423!2d-3.788803!3d37.779366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7e8cf07b9df%3A0x40f1aadb78ea1a9f!2sMEDAC%20Ja%C3%A9n!5e0!3m2!1ses!2ses!4v1712345678900"
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3170.7236460591423!2d-3.788803!3d37.779366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6dd7e8cf07b9df%3A0x40f1aadb78ea1a9f!2sMEDAC%20Ja%C3%A9n!5e0!3m2!1ses!2ses!4v1712345678900"
             width="400" height="300"></iframe>
     </div>
 
@@ -199,9 +222,72 @@
         </a>
     </div>
 
+    <!--Formulario de recopilación de información-->
+    <div id="formulario">
+        <h2>Formulario Completo de recopilación de información</h2>
+        <form action="proceso.php" method="post">
+            <fieldset>
+                <legend>Datos Personales</legend>
+                Nombre:<input type="text" name="nombre"> <br><br>
+                Apellidos:<input type="text" name="apellidos"> <br><br>
+                Edad:<input type="text" name="edad"> <br><br>
+
+                Genero: <br><br>
+                <input type="radio" name="genero" value="Hombre">Hombre
+                <input type="radio" name="genero" value="Mujer"> Mujer
+                <br><br>
+            </fieldset>
+
+            <fieldset>
+                <legend>Contacto</legend>
+                Correo Electrónico: <input type="text" name="Correo"> <br><br>
+                Código Postal: <input type="text" name="codigo_postal"> <br><br>
+                Dirección: <input type="text" name="dirección"> <br><br>
+                Ciudad: <select name="ciudad" required> 
+                <option value="Jaén">Jaén</option>
+                <option value="Cádiz">Cádiz</option>
+                <option value="Córdoba">Córdoba</option>
+                <option value="Granada">Granada</option>
+                <option value="Huelva">Huelva</option>
+                <option value="Almería">Almería</option>
+                <option value="Málaga ">Málaga</option>
+                <option value="Sevilla">Sevilla</option>
+                </select>
+                <br><br>
+                Contraseña: <input type="password" name="Contraseña"> <br><br>
+            </fieldset>
+
+            <fieldset>
+                <legend>Datos de Interés</legend>
+                Estado Civil:<br>
+                <input type="radio" name="Estado_Civil">Casado
+                <input type="radio" name="Estado_Civil">No Casado
+                <br><br>
+                Hobbies: <br>
+                <input type="checkbox" name="Hobbies">Series <br>
+                <input type="checkbox" name="Hobbies">Libros <br>
+                <input type="checkbox" name="Hobbies">Gardineria <br>
+                <input type="checkbox" name="Hobbies">Cocina <br>
+                <input type="checkbox" name="Hobbies">Deporte <br>
+
+            </fieldset>
+
+            <fieldset>
+                <legend>Comentarios Adicionales</legend>
+                Escribe aquí tus comentarios: <br>
+                <input type="tel" name="comentarios">Escribe tus comentarios aquí...
+            </fieldset>
+
+            <input type="submit" value="enviar">
+        </form>
+    </div>
+
+    <hr>
+
     <footer>
         <small>© 2025 Saúl García Navas - Proyecto HTML “Mi Perfil Profesional”</small>
     </footer>
 
 </body>
+
 </html>
