--- a/Tema_5/Caso_practico2.html
+++ b/Tema_5/Caso_practico2.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name ="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <title>Caso practco 1</title>
 </head>
+
 <body>
 
-<form action = "proceso.php" method="post">
-    <fieldset>
-        <legend>Datos Personales</legend>
-    nombre: <input type="text" name="nombre"> <br> <br>
-    edad: <input type="number" name="Edad"> <br> <br>
-    
-    <input type="submit" value ="enviar">
-    </fieldset>
+    <form action="proceso.php" method="post">
+        <fieldset>
+            <legend>Datos Personales</legend>
+            nombre: <input type="text" name="nombre"> <br> <br>
+            edad: <input type="number" name="Edad"> <br> <br>
+
+            <input type="submit" value="enviar">
+        </fieldset>
 
 
-     <fieldset>
-        <legend>Datos de intereses</legend>
-    Â¿estas casado? <input type="radio" name="casado" value ="si">si
-                    <input type="radio" name="casado" value ="no">no 
-    <br> <br>
-    <h5>Deportes</h5>
-    <input type="checkbox" name= "Deportes" value="Baloncesto">Baloncesto
-    <input type="checkbox" name= "Deportes" value="futbol">futbol
-    <input type="checkbox" name= "Deportes " value="ciclismo">ciclismo
-    
-    </fieldset> <br> <br>
-    <input type="submit" value ="enviar">
-</form>
- </body>
- </html>
+        <fieldset>
+            <legend>Datos de intereses</legend>
+            ¿estas casado? <input type="radio" name="casado" value="si">si
+            <input type="radio" name="casado" value="no">no
+            <br> <br>
+            <h5>Deportes</h5>
+            <input type="checkbox" name="Deportes" value="Baloncesto">Baloncesto
+            <input type="checkbox" name="Deportes" value="futbol">futbol
+            <input type="checkbox" name="Deportes " value="ciclismo">ciclismo
+
+        </fieldset> <br> <br>
+        <input type="submit" value="enviar">
+    </form>
+</body>
+
+</html>
