--- a/GarcíaNavasSaúl_LLMM/mi_perfil/Documento1.html
+++ b/GarcíaNavasSaúl_LLMM/mi_perfil/Documento1.html
@@ -303,9 +303,13 @@
             </fieldset>
 
             <fieldset>
+
+                <!--Explicación breve de lo que hace este bloque-->
+                <!--La etiqueta <textarea> tiene como función el crear un area en el que puedes introducir información casi igual a input solo que la puedes modificar mucho más a traves de sus distintos atributos, como rows que especifica como de largo será el recuadro en el que escribas, cols en el que dicides la amplitud de la caja o placerholder donde puedes escribir anotaciones que saldrán en el interior de la caja-->
+
                 <legend>Comentarios Adicionales</legend>
                 Escribe aquí tus comentarios: <br>
-                <textarea rows="10" cols="60" placeholder="Escribe tus comentarios aquí..."></textarea>
+                <textarea rows="10" cols="120" placeholder="Escribe tus comentarios aquí..."></textarea>
             </fieldset>
 
             <input type="submit" value="Enviar">
@@ -320,4 +324,5 @@
     </footer>
 
 </body>
+
 </html>
