--- a/Tema_7/Caso_practico3/Index.html
+++ b/Tema_7/Caso_practico3/Index.html
@@ -11,16 +11,52 @@
 </header>
 
 <body>
-    <div>
+
     <h3 id="azul">Datos personales</h3>
+    <div>
     <a id="azul">Nombre y apellidos:</a>    <a>Pedro Mártinez Maldonado</a><br>
-    <a id="azul">Dirección</a>    <a>C/Trinidad,nº32,p.2 - 29004 Málaga</a><br>
-    <a id="azul">Teléfono</a>    <a>963.141.591 - 636.628.208</a><br>
-    <a id="azul">Email</a>    <a>pmartinez@webmalakadesign.com</a><br>
-    <a id="azul">Nacionalidad</a>    <a>Español</a><br>
-    <a id="azul">Fecha de nacimiento</a>    <a>2 de abril de 1979</a><br>
-    <a id="azul">D.N.I. número</a>    <a>27.182.418-s</a><br>
+    <a id="azul">Dirección:</a>    <a>C/Trinidad,nº32,p.2 - 29004 Málaga</a><br>
+    <a id="azul">Teléfono:</a>    <a>963.141.591 - 636.628.208</a><br>
+    <a id="azul">Email:</a>    <a>pmartinez@webmalakadesign.com</a><br>
+    <a id="azul">Nacionalidad:</a>    <a>Español</a><br>
+    <a id="azul">Fecha de nacimiento:</a>    <a>2 de abril de 1979</a><br>
+    <a id="azul">D.N.I. número:</a>    <a>27.182.418-S</a><br>
     </div>
+
+    <h3 id="verde">Experiencia laboral</h3>
+    <div>
+    <a id="verde">2007-2010:</a>    <a>Marqueting Line S.L. Trabajé como diseñador grafico.</a><br>
+    <a id="verde">2010-2018:</a>    <a>Link by Web Analista programador.</a><br>
+    <a id="verde">2018-Actualidad:</a>    <a>WebMalagaDesign. Jefe de proyecto.</a><br>
+    </div>
+
+    <h3 id="amarillo">Educación y formación</h3>
+    <div>
+    <a id="amarillo">2004-2006:</a>    <a>Instituto Jesus Martín. Sistemas microinformáticos y Redes</a><br>
+    <a id="amarillo">2006-2008:</a>    <a>Instituto Medac. Desarrollo de Aplicaciones Web </a><br>
+    </div>
+
+    <h3 id="cyan">Idiomas</h3>
+    <div>
+    <a id="cyan">Inglés:</a>    <a>Nivel Alto.</a><br>
+    <a id="cyan">Francés:</a>    <a>Nivel Medio.</a><br>
+    <a id="cyan">Alemán:</a>    <a>Nivel Alto.</a><br>
+    </div>
+
+    <h3 id="blanco">Conocimientos informáticos (Rango de 1 al 5)</h3>
+    <div>
+    <a id="blanco">HTML:</a>    <a>Nivel 3</a><br>
+    <a id="blanco">CSS:</a>    <a>Nivel 4</a><br>
+    <a id="blanco">Javascript:</a>    <a>Nivel 3</a><br>
+    <a id="blanco">Bootstrap:</a>    <a>Nivel 2</a><br>
+    </div>
+
+    <h3 id="naranja">Permisos de conducción</h3>
+    <div>
+    <a id="naranja">Coche:</a>    <a>Sí</a><br>
+    <a id="naranja">Moto:</a>    <a>No</a><br>
+    </div>
+
 </body>
 
 </html>
